# create_aws_account

./: Cargo.toml  devbox.json  flake.nix  justfile  source_this_to_sso
src/: main.rs
