[package]
name = "create_aws_account"
description = "A Rust program to create an AWS account using AWS SDK for Rust and display progress in terminal UI."
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0-alpha.5"
tokio = { version = "1.47.1", features = ["full"] }
aws-config = "1.8.5"
aws-sdk-organizations = "1.91.0"
